--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -9,7 +9,8 @@
     <link href="{% static 'css/styles.css'%}" rel="stylesheet">
 </head>
 <body>
-    <div class="conatiner">
+    <div class="container">
+        {% if produtos %}
         <h1>Produtos</h1>
 
         <table class="table table-dark">
@@ -48,7 +49,9 @@
                 {% endfor %}
             </tbody>
         </table>
-
+        {% else %}
+            <h2>Ainda não existem produtos cadastrados</h2>
+        {% endif %}
     </div>
 {% bootstrap_javascript jquery='full' %}
 
